# cookiecutter-c89-autotools

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  LICENSE.txt  Makefile.am  README.md  autogen.sh  configure.ac
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}-bin/: Makefile.am
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}-bin/src/: hello.c
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}-docs/: Makefile.am
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}-docs/source/: conf.py  index.rst
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}-lib/: Makefile.am  {{cookiecutter.project_slug}}.pc.in
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}-lib/include/{{cookiecutter.project_slug}}/: hello.h  {{cookiecutter.project_slug}}.h.in
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}-lib/src/: hello.c  {{cookiecutter.project_slug}}.c
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}-tests/: Makefile.am  test.h  test_dummy.c
